# SpotiFetch.rs

./: Cargo.toml  README.md  dist-workspace.toml  rust-toolchain.toml
src/: artist.json  colors.rs  main.rs  output.rs  print.rs  spotify.rs
