[package]
name = "spotifetch"
version = "0.1.3"
edition = "2021"
description = "A simple and beautiful fetch tool for spotify, now rusty :) "
repository = "https://github.com/dotzenith/SpotiFetch.rs"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pigmnts = "0.7.0"
kolorz = "0.10.0"
reqwest = { version = "0.11.20", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rspotify = { version = "0.12.0", default-features = false, features = ["cli", "client-ureq", "ureq-rustls-tls"] }
clap = { version = "4.4.9", features = ["cargo"] }
platform-dirs = "0.3.0"
anyhow = "1.0.75"
image = "0.23.12"
rand = "0.8.5"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.10.0"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell", "homebrew"]
# A GitHub repo to push Homebrew formulas to
tap = "dotzenith/homebrew-tap"
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "aarch64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Publish jobs to run in CI
pr-run-mode = "skip"

[workspace.metadata.dist.github-custom-runners]
aarch64-unknown-linux-gnu = "buildjet-2vcpu-ubuntu-2204-arm"
