[package]
name = "spotifetch"
version = "0.1.5"
edition = "2021"
description = "A simple and beautiful fetch tool for spotify, now rusty :) "
homepage = "https://github.com/dotzenith/SpotiFetch.rs"
repository = "https://github.com/dotzenith/SpotiFetch.rs"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pigmnts = "0.7.0"
kolorz = "0.10.0"
reqwest = { version = "0.11.20", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rspotify = { version = "0.12.0", default-features = false, features = ["cli", "client-ureq", "ureq-rustls-tls"] }
clap = { version = "4.4.9", features = ["cargo"] }
platform-dirs = "0.3.0"
anyhow = "1.0.75"
image = "0.23.12"
rand = "0.8.5"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
