[package]
name = "spotifetch"
version = "1.0.0"
edition = "2024"
description = "A simple and beautiful fetch tool for spotify, now rusty :) "
homepage = "https://github.com/dotzenith/SpotiFetch.rs"
repository = "https://github.com/dotzenith/SpotiFetch.rs"
license = "MIT"

[dependencies]
pigmnts = "0.7.0"
kolorz = "1.1.0"
ureq = { version = "3.0.1", features = ["json"] }
url = "2.5.4"
rspotify = { version = "0.12.0", default-features = false, features = ["cli", "client-ureq", "ureq-rustls-tls"] }
clap = { version = "4.4.9", features = ["cargo"] }
platform-dirs = "0.3.0"
anyhow = "1.0.75"
image = "0.23.12"
rand = "0.8.5"

[profile.release]
lto = true
panic = "abort"
strip = true

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
